--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="max-w-7xl mx-auto manrope-font">
-    <header>
+  <body class="max-w-[1600px] mx-auto manrope-font">
+    <header class="max-w-7xl mx-auto">
       <!-- banner section -->
       <div
         class="banner-petant my-16 flex flex-col md:flex-row justify-between mx-auto min-h-[200px]"
@@ -56,7 +56,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="max-w-7xl mx-auto">
       <!-- feature section -->
       <section>
         <h1 class="text-5xl font-extrabold text-center mt-32">
@@ -172,7 +172,9 @@
         <div
           class="parent-div h-[650px] bg-gradient-to-r from-[#ff8939] to-[#ff0000] flex mt-28 rounded-[10px]"
         >
-          <div class="left-div relative flex justify-center items-center p-17.5 w-1/2">
+          <div
+            class="left-div relative flex justify-center items-center p-17.5 w-1/2 bg-[url(./images/bg_cup.png)] bg-no-repeat bg-bottom"
+          >
             <div class="text-white">
               <h1 class="text-5xl font-extrabold">
                 Meet Our Super <br />
@@ -187,35 +189,122 @@
               <button
                 class="text-xl font-bold bg-white w-[139px] h-[56px] rounded-lg"
               >
-                <span class="bg-gradient-to-r from-[#ff8939] to-[#ff0000] bg-clip-text text-transparent">Show All</span>
+                <span
+                  class="bg-gradient-to-r from-[#ff8939] to-[#ff0000] bg-clip-text text-transparent"
+                  >Show All</span
+                >
               </button>
-              <img class="h-1/2 absolute bottom-0 left-[30%] opacity-10" src="./images/cup.png" alt="">
             </div>
           </div>
           <div class="right-div w-1/2 h-full relative">
-            <div class="massage-card w-[70%] h-[233px] bg-white rounded-lg p-11 absolute top-[35%] z-10">
-              <p class="text-gray-500 leading-7 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <div
+              class="massage-card w-[70%] h-[233px] bg-white rounded-lg p-11 absolute top-[35%] z-10"
+            >
+              <p class="text-gray-500 leading-7 mb-5">
+                We are providing the best and suitable home insurance services
+                for the people who are interested to treatment
+              </p>
               <p class="font-bold leading-7">Ilham Yuda</p>
               <p class="font-medium leading-7 text-gray-500">Businessman</p>
-              <img class="absolute -top-[20px] -left-[20px] rounded-full p-1 bg-white" src="./images/client.png" alt="">
-              <img class="absolute right-4 bottom-4" src="./images/circles.png" alt="">
+              <img
+                class="absolute -top-[20px] -left-[20px] rounded-full p-1 bg-white"
+                src="./images/client.png"
+                alt=""
+              />
+              <img
+                class="absolute right-4 bottom-4"
+                src="./images/circles.png"
+                alt=""
+              />
             </div>
-            <div class="massage-card w-[70%] h-[233px] bg-white rounded-lg p-11 absolute top-[12%] left-[20%] opacity-25">
-              <p class="text-gray-500 leading-7 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <div
+              class="massage-card w-[70%] h-[233px] bg-white rounded-lg p-11 absolute top-[12%] left-[20%] opacity-25"
+            >
+              <p class="text-gray-500 leading-7 mb-5">
+                We are providing the best and suitable home insurance services
+                for the people who are interested to treatment
+              </p>
               <p class="font-bold leading-7">Ilham Yuda</p>
               <p class="font-medium leading-7 text-gray-500">Businessman</p>
-              <img class="absolute -top-[20px] -left-[20px] rounded-full p-1 bg-white" src="./images/client.png" alt="">           
+              <img
+                class="absolute -top-[20px] -left-[20px] rounded-full p-1 bg-white"
+                src="./images/client.png"
+                alt=""
+              />
             </div>
-            <div class="massage-card w-[70%] h-[233px] bg-white rounded-lg p-11 absolute top-[60%] left-[20%] opacity-25">
-              <p class="text-gray-500 leading-7 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <div
+              class="massage-card w-[70%] h-[233px] bg-white rounded-lg p-11 absolute top-[60%] left-[20%] opacity-25"
+            >
+              <p class="text-gray-500 leading-7 mb-5">
+                We are providing the best and suitable home insurance services
+                for the people who are interested to treatment
+              </p>
               <p class="font-bold leading-7">Ilham Yuda</p>
               <p class="font-medium leading-7 text-gray-500">Businessman</p>
-              <img class="absolute -top-[20px] -left-[20px] rounded-full p-1 bg-white" src="./images/client.png" alt="">           
+              <img
+                class="absolute -top-[20px] -left-[20px] rounded-full p-1 bg-white"
+                src="./images/client.png"
+                alt=""
+              />
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="mt-[130px] bg-gradient-to-r from-[#ff89381a] to-[#ff00001a]">
+      <div class="full-div py-[134px] max-w-7xl mx-auto">
+      <!-- fast div -->
+      <div class="flex justify-between items-center">
+        <img class="w-[62px] h-16" src="./images/cup.png" alt="" />
+        <div class="flex items-center">
+          <p class="mr-10 text-xl font-medium text-gray-600">Ready to get started?</p>
+          <button
+            class="w-[164px] h-14 rounded-lg text-white bg-gradient-to-r from-[#ff8939] to-[#ff0000] text-xl font-bold"
+          >
+            Get Started
+          </button>
+        </div>
+      </div>
+      <!-- second div -->
+       <div class="mt-24 flex justify-between">
+
+        <div>
+          <h2 class="text-xl font-semibold">Quick Links</h2>
+          <p class="text-gray-500 mt-4">Home</p>
+          <p class="text-gray-500 mt-4">About Us</p>
+          <p class="text-gray-500 mt-4">Insurance</p>
+          <p class="text-gray-500 mt-4">Privacy Policy</p>
+        </div>
+
+        <div>
+          <h2 class="text-xl font-semibold">Our Service</h2>
+          <p class="text-gray-500 mt-4">Life Insurance</p>
+          <p class="text-gray-500 mt-4">Car Insurance</p>
+          <p class="text-gray-500 mt-4">Health Insurance</p>
+          <p class="text-gray-500 mt-4">House Insurance</p>
+        </div>
+
+        <div>
+          <h2 class="text-xl font-semibold">Help</h2>
+          <p class="text-gray-500 mt-4">FAQs</p>
+          <p class="text-gray-500 mt-4">Contact Us</p>
+        </div>
+
+        <div>
+          <h2 class="text-2xl mb-10">Subscribe to our <br> newsletter</h2>
+          <input class="outline-none border-b-2 border-gray-600 pb-5" type="email" placeholder="Email address">
+          <button class="w-8 h-8 rounded-full bg-gradient-to-r from-[#ff8939] to-[#ff0000] text-white"><i class="fa-solid fa-angle-right"></i></button>
+          <div class="flex gap-6 mt-12 text-gray-600">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+           <i class="fa-brands fa-square-instagram"></i>
+          </div>
+        </div>
+
+       </div>
+
+        <p class="text-center text-gray-600 mt-16">© 2027 UIDesign.to - All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
