Compleated the website

--- a/index.html
+++ b/index.html
@@ -250,60 +250,130 @@
           </div>
         </div>
       </section>
+      <!-- News & Events section -->
+      <section class="my-[130px]">
+        <h1 class="font-extrabold text-[45px] text-center">News & Events</h1>
+        <p class="mt-5 font-medium leading-7 text-center text-gray-500">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, <br />
+          by injected humour, or randomised words which don't look even slightly
+          believable.
+        </p>
+        <div class="card-parent mt-[50px] flex flex-col justify-center items-center md:items-baseline-last gap-6 md:flex-row">
+          <div
+            class="card w-[364px] h-[448px] border border-gray-500 rounded-[10px] p-[22px]"
+          >
+            <img src="./images/news-1.png" alt="" />
+            <p class="font-medium leading-7 text-gray-500 mt-5">Feb 05, 2027</p>
+            <h2 class="font-extrabold text-xl my-2.5">
+              Collecting 8 points for <br />
+              discount
+            </h2>
+            <p class="font-medium leading-7 text-gray-500 my-2.5">
+              There are many variations of passages of <br />
+              Lorem Ipsum available.
+            </p>
+            <h3 class="font-bold leading-6">Learn More</h3>
+          </div>
+          <div
+            class="card w-[364px] h-[448px] border border-gray-500 rounded-[10px] p-[22px]"
+          >
+            <img src="./images/news-2.png" alt="" />
+            <p class="font-medium leading-7 text-gray-500 mt-5">Feb 05, 2027</p>
+            <h2 class="font-extrabold text-xl my-2.5">
+              Collecting 8 points for <br />
+              discount
+            </h2>
+            <p class="font-medium leading-7 text-gray-500 my-2.5">
+              There are many variations of passages of <br />
+              Lorem Ipsum available.
+            </p>
+            <h3 class="font-bold leading-6">Learn More</h3>
+          </div>
+          <div
+            class="card w-[364px] h-[448px] border border-gray-500 rounded-[10px] p-[22px]"
+          >
+            <img src="./images/news-3.png" alt="" />
+            <p class="font-medium leading-7 text-gray-500 mt-5">Feb 05, 2027</p>
+            <h2 class="font-extrabold text-xl my-2.5">
+              Collecting 8 points for <br />
+              discount
+            </h2>
+            <p class="font-medium leading-7 text-gray-500 my-2.5">
+              There are many variations of passages of <br />
+              Lorem Ipsum available.
+            </p>
+            <h3 class="font-bold leading-6">Learn More</h3>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="mt-[130px] bg-gradient-to-r from-[#ff89381a] to-[#ff00001a]">
       <div class="full-div py-[134px] max-w-7xl mx-auto">
-      <!-- fast div -->
-      <div class="flex justify-between items-center">
-        <img class="w-[62px] h-16" src="./images/cup.png" alt="" />
-        <div class="flex items-center">
-          <p class="mr-10 text-xl font-medium text-gray-600">Ready to get started?</p>
-          <button
-            class="w-[164px] h-14 rounded-lg text-white bg-gradient-to-r from-[#ff8939] to-[#ff0000] text-xl font-bold"
-          >
-            Get Started
-          </button>
+        <!-- fast div -->
+        <div class="flex justify-between items-center">
+          <img class="w-[62px] h-16" src="./images/cup.png" alt="" />
+          <div class="flex items-center">
+            <p class="mr-10 text-xl font-medium text-gray-600">
+              Ready to get started?
+            </p>
+            <button
+              class="w-[164px] h-14 rounded-lg text-white bg-gradient-to-r from-[#ff8939] to-[#ff0000] text-xl font-bold"
+            >
+              Get Started
+            </button>
+          </div>
         </div>
-      </div>
-      <!-- second div -->
-       <div class="mt-24 flex justify-between">
+        <!-- second div -->
+        <div class="mt-24 flex flex-col items-center md:flex-row justify-between">
+          <div>
+            <h2 class="text-xl font-semibold">Quick Links</h2>
+            <p class="text-gray-500 mt-4">Home</p>
+            <p class="text-gray-500 mt-4">About Us</p>
+            <p class="text-gray-500 mt-4">Insurance</p>
+            <p class="text-gray-500 mt-4">Privacy Policy</p>
+          </div>
 
-        <div>
-          <h2 class="text-xl font-semibold">Quick Links</h2>
-          <p class="text-gray-500 mt-4">Home</p>
-          <p class="text-gray-500 mt-4">About Us</p>
-          <p class="text-gray-500 mt-4">Insurance</p>
-          <p class="text-gray-500 mt-4">Privacy Policy</p>
-        </div>
+          <div>
+            <h2 class="text-xl font-semibold">Our Service</h2>
+            <p class="text-gray-500 mt-4">Life Insurance</p>
+            <p class="text-gray-500 mt-4">Car Insurance</p>
+            <p class="text-gray-500 mt-4">Health Insurance</p>
+            <p class="text-gray-500 mt-4">House Insurance</p>
+          </div>
 
-        <div>
-          <h2 class="text-xl font-semibold">Our Service</h2>
-          <p class="text-gray-500 mt-4">Life Insurance</p>
-          <p class="text-gray-500 mt-4">Car Insurance</p>
-          <p class="text-gray-500 mt-4">Health Insurance</p>
-          <p class="text-gray-500 mt-4">House Insurance</p>
-        </div>
+          <div>
+            <h2 class="text-xl font-semibold">Help</h2>
+            <p class="text-gray-500 mt-4">FAQs</p>
+            <p class="text-gray-500 mt-4">Contact Us</p>
+          </div>
 
-        <div>
-          <h2 class="text-xl font-semibold">Help</h2>
-          <p class="text-gray-500 mt-4">FAQs</p>
-          <p class="text-gray-500 mt-4">Contact Us</p>
-        </div>
-
-        <div>
-          <h2 class="text-2xl mb-10">Subscribe to our <br> newsletter</h2>
-          <input class="outline-none border-b-2 border-gray-600 pb-5" type="email" placeholder="Email address">
-          <button class="w-8 h-8 rounded-full bg-gradient-to-r from-[#ff8939] to-[#ff0000] text-white"><i class="fa-solid fa-angle-right"></i></button>
-          <div class="flex gap-6 mt-12 text-gray-600">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-twitter"></i>
-           <i class="fa-brands fa-square-instagram"></i>
+          <div>
+            <h2 class="text-2xl mb-10">
+              Subscribe to our <br />
+              newsletter
+            </h2>
+            <input
+              class="outline-none border-b-2 border-gray-600 pb-5"
+              type="email"
+              placeholder="Email address"
+            />
+            <button
+              class="w-8 h-8 rounded-full bg-gradient-to-r from-[#ff8939] to-[#ff0000] text-white"
+            >
+              <i class="fa-solid fa-angle-right"></i>
+            </button>
+            <div class="flex gap-6 mt-12 text-gray-600">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-square-instagram"></i>
+            </div>
           </div>
         </div>
 
-       </div>
-
-        <p class="text-center text-gray-600 mt-16">© 2027 UIDesign.to - All rights reserved.</p>
+        <p class="text-center text-gray-600 mt-16">
+          © 2027 UIDesign.to - All rights reserved.
+        </p>
       </div>
     </footer>
   </body>
